--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <img
         src="2764.png"
         alt="Imagen del amor" class="hero__image"
+      >img
     </figure>
     <button id="heroButtonSi" class="hero__button">Si</button>
     <button id="heroButtonNo" class="hero__button">No</button>
