--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 
         Are you having a good time? </h1>
     <figure class="hero__image-container">
-      <img
+      <img>
         src="2764.png"
         alt="Imagen del amor" class="hero__image"
-      >img
+      </img>
     </figure>
     <button id="heroButtonSi" class="hero__button">Si</button>
     <button id="heroButtonNo" class="hero__button">No</button>
